@@ -1,6 +1,7 @@
 New in SVN
 ----------
 
+* Fixed Issue 464: support alignment via :class: in image directives.
 * Fixed Issue 482: Line blocks with indented parts get extraneous spacing
 * Fixed Issue 470: Support for :target: in figures.
 * New style "image" to be applied to image directives.
